--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,9 @@
 TODO List
- - Add back Open Sans/Roboto fonts?
  - Change navbar into pills and dropdowns
  - Paginate project pages
  - Add contact form
  - Modal for images in the project section
+ - Make a contact form
+ - Add media icons
+ - Make media as footer
+ - Add back Open Sans/Roboto fonts?
