--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,10 @@
 TODO List
- - Change navbar into pills and dropdowns
  - Paginate project pages
+ - Carousel the pictures on the project page
  - Modal for images in the project section
  - Add full screen picture to homepage
- - Add JS to courses page
  - Fix content on projects page
- - Have link to old website in project page
  - Compress the images in gallery
- - Add video/image on homepage
 
 https://www.sitepoint.com/10-guidelines-better-website-background-videos/
 https://www.creativebloq.com/inspiration/css-animation-examples
